--- a/P.Felipe/css/valida.css
+++ b/P.Felipe/css/valida.css
@@ -1,43 +1,23 @@
 *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    }
-    .valida{
-        text-align: center;
-        padding: 10px;
-        background-color: rgb(207, 28, 28);
-        color: white;
-        margin: 30px;
-        border-radius: 10px;
-        margin-top: 120px;
-    }
-    .valida-suce{
-        margin-top: 120px;
-        text-align: center;
-        padding: 10px;
-        background-color: rgb(14, 211, 96);
-        color: rgb(0, 0, 0);
-        margin: 50px;
-        border-radius: 10px;
-    }
-    .voltar{
-        text-align: center;
-        width: 15%;
-        padding: 10px; 
-        background-color: rgb(137, 137, 170);           
-        border-radius: 5px;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.685);
-        transition: 1s;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .voltar a{
-        text-decoration: none;
-        color: white;
-    }
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+}
+div.voltar{
+    text-align: center;
+    width: 15%;
+    padding: 10px; 
+    background-color: rgb(137, 137, 170);           
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.685);
+    transition: 1s;
+    margin-left: auto;
+    margin-right: auto;
+}
+.voltar a{
+    text-decoration: none;
+    color: white;
+}
 
     
